--- a/src/components/CarsList/CarsList.css
+++ b/src/components/CarsList/CarsList.css
@@ -4,5 +4,7 @@
 
 .list {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    margin-bottom: 30px;
 }
